# gift-of-tongues

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy  rust_fmt.yml
src/: main.rs
