[package]
name = "gift-of-tongues"
author = "Carson Woods"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A very small CLI utility for looking up the meaning of English words"
homepage = "https://github.com/carsonwoods/gift-of-tongues"
repository = "https://github.com/carsonwoods/gift-of-tongues"

        
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "3.2.22", features = ["derive"] }

[[bin]]
name = "tongues"
path = "src/main.rs"