[package]
name = "gift-of-tongues"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A very small CLI utility for looking up the meaning of English words in a dictionary"
homepage = "https://github.com/carsonwoods/gift-of-tongues"
repository = "https://github.com/carsonwoods/gift-of-tongues"
keywords = ["dictionary", "english", "cli", "definitions", "words"]
        
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "3.2.22", features = ["derive"] }
confy = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
        
[[bin]]
name = "tongues"
path = "src/main.rs"